fix alignment

--- a/src/Components/Job.css
+++ b/src/Components/Job.css
@@ -1,5 +1,5 @@
 .job-container {
-    width: 70vw;
+    width: 100%;
     background-color: #fff;
     display: flex;
     align-items: center;
